<resources>
    <string name="app_name">Lab 3.4</string>
    <string name="account1_balance">Account1 Balance</string>
    <string name="date_of_birth">DATE-OF-BIRTH</string>
    <string name="dob">DOB</string>
    <string name="investment_amount">Investment Amount</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
